<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="pl.kyon.forgottenfridge.MainActivity">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="101"
        android:title="@string/action_sync"
        android:icon="@drawable/ic_action_cloud_sync"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="200"
        android:title="@string/action_share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_drop"
        android:orderInCategory="201"
        android:title="@string/action_drop"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never"/>
</menu>
