<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.kyon.forgottenfridge.MainActivity"
    tools:showIn="@layout/activity_main">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1,2"
        android:shrinkColumns="0"
        android:id="@+id/item_table">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                style="@style/TableHeader"
                android:text="@string/item_name"/>
            <TextView
                style="@style/TableHeader"
                android:text="@string/item_amount"
                />
            <TextView
                style="@style/TableHeader"
                android:text="@string/item_expire"/>
        </TableRow>
    </TableLayout>

</ScrollView>
